# volume_measure

./: 20190509-171720-cube.stl  README.md  cube.stl  depth0000.dmap  depth0001.dmap  imshow_segmetation.py  plot_test.py  result.txt  test.py
DataFromMobile/: README.md
DataFromMobile/box/IMAGE_TIME/: 1.txt  10.txt  13.txt  15.txt  16.txt  17.txt  18.txt  19.txt  4.txt  7.txt  9.txt
DataFromMobile/box/POSES/: 10.txt  12.txt  13.txt  14.txt  16.txt  17.txt  18.txt  2.txt  3.txt  4.txt  5.txt  7.txt  8.txt  9.txt
DataFromMobile/dinoSparseRing/: pose.txt
DataFromMobile/orange/IMAGE_TIME/: 13.txt  16.txt  18.txt  2.txt  21.txt  25.txt  28.txt  29.txt  30.txt  4.txt
DataFromMobile/orange/POSES/: 0.txt  10.txt  12.txt  13.txt  15.txt  17.txt  18.txt  19.txt  2.txt  20.txt  22.txt  26.txt  27.txt  31.txt  32.txt  6.txt  8.txt  9.txt
DataFromMobile/orange/__MACOSX/: ._POSES
DataFromVINS/box/IMAGE_TIME/: 0.txt  11.txt  12.txt  14.txt  2.txt  3.txt  5.txt  6.txt  8.txt
DataFromVINS/box/POSES/: 0.txt  1.txt  11.txt  15.txt  19.txt  6.txt
result/: box.ply  dinoSparseRing.stl  shoe.ply
src/: main.py  reconstruction.py
src/archive/: camera_volumetric_plot.py  cv2_test.py  matplt_test.py  multiprocessing_test.py  rename_using_re.py  seg_imshow_and_save_one.py  segementation_grabcut.py  segementation_threshold.py
src/sfm/: CMakeLists.txt  add_markers.py  dense.cpp  measurement.py  result.txt  sfm_online.py  sfm_pipeline.py
src/sfm/elas/: elas.cpp  elas.h
src/visual_hull/: imageProcess.py  pnptest.py  points.txt  readme.txt  reconstruction.py
(+39 files in other folders)
